create Tab Handler infraStructure

--- a/src/app/pages/my-activity/components/applied-universities/applied-universities.component.html
+++ b/src/app/pages/my-activity/components/applied-universities/applied-universities.component.html
@@ -1,4 +1,4 @@
-<div class="d-none" id="applicant-tab-content-2">
+<div  id="applicant-tab-content-2">
   <div class="message-box">
     <div class="d-flex flex-grow-0 mr-5">
       <svg
