--- a/src/app/pages/my-activity/components/my-wish-list/my-wish-list.component.html
+++ b/src/app/pages/my-activity/components/my-wish-list/my-wish-list.component.html
@@ -1,4 +1,4 @@
-<div class="d-none" id="applicant-tab-content-4">
+<div  id="applicant-tab-content-4">
   <div class="list-item grid" sm="cols-12">
     <div class="list-item-title" sm="col-3">Title</div>
     <div sm="col-9">ApplyChance Scholarship 2020</div>
