--- a/src/app/pages/my-activity/components/applied-universities/applied-universities.component.html
+++ b/src/app/pages/my-activity/components/applied-universities/applied-universities.component.html
@@ -71,7 +71,7 @@
       </a>
     </div>
   </div>
-  <button class="button button-add">
+  <button (click)="openDialog()" class="button button-add">
     <span class="icon icon-large mr-0">
       <svg
         width="22"
