--- a/src/app/pages/my-activity/components/applied-universities/applied-universities.component.scss
+++ b/src/app/pages/my-activity/components/applied-universities/applied-universities.component.scss
@@ -138,6 +138,7 @@
 }
 
  .list-item {
+  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
   position: relative;
   background-color: white;
   border-radius: 8px;
