--- a/src/app/pages/my-activity/components/applied-universities-item/applied-universities-item.component.scss
+++ b/src/app/pages/my-activity/components/applied-universities-item/applied-universities-item.component.scss
@@ -55,3 +55,10 @@
  .s-pagination .s-pagination-item.next {
   font-weight: 400;
 }
+
+.show-drop-down{
+  display: block;
+}
+.hide-drop-down{
+  display: none;
+}
