--- a/src/app/theme/style.scss
+++ b/src/app/theme/style.scss
@@ -2,6 +2,7 @@
 /*      IMPORTS
 ======================*/
 @import "~bootstrap/dist/css/bootstrap.css";
+@import "~@ng-select/ng-select/themes/default.theme.css";
 @import "./var";
 
 
